# djangoblog

./: .env.dist  .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: django.yml
blog/: admin.py  forms.py  index.py  models.py  tests.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_article.py  0002_article_cover.py  0003_article_published_at.py  0003_auto_20200801_1324.py  0004_comment.py  0005_auto_20200729_0933.py  0006_auto_20200729_1913.py
blog/templates/: article_show.html  author_show.html  base.html  category_show.html  error_403.html  error_404.html  index.html  pagination.html
blog/templates/article/: edit.html  index.html  search.html  show.html
blog/templates/category/: index.html
blog/templates/registration/: login.html  signup.html
blog/views/: __init__.py  article.py  author.py  category.py
djangoblog/: settings.py  settings_test.py  urls.py
