[tool.poetry]
name = "djangoblog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
django = "^3.0.14"
django-markdownify = "^0.8.1"
Pillow = "^7.2.0"
django-environ = "^0.4.5"
psycopg2 = "^2.8.5"
gunicorn = "^20.0.4"
django-heroku = "^0.3.1"
django-debug-toolbar = "^2.2"
boto3 = "^1.14.33"
django-storages = "^1.9.1"
algoliasearch-django = "^1.7.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
